--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: GitHub Test Com comando Python
+name: GitHub Test
 
 on:
   push:
@@ -37,3 +37,6 @@ jobs:
     - name: Test with python
       run: |
         python checkpass.py
+    - name: Test with pytest
+      run: |
+        pytest checkpass.py
