--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,4 +37,6 @@ jobs:
     - name: Test with pytest
       run: |
         pytest checkpass.py
-
+    - name: Test with python
+      run: |
+        python checkpass.py
