--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: GitHub Test with Pytest
+name: GitHub test with Pytest
 
 on:
   push:
@@ -37,4 +37,3 @@ jobs:
     - name: Test with python
       run: |
         python checkpass.py
-
